--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 # Site
-name: "Mediumish"
-title: "Mediumish"
+name: "Another Technical Blog"
+title: "Another Technical Blog"
 description: "Jekyll template, Medium styled, free for bloggers."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: /mediumish-theme-jekyll
-google_analytics: 'UA-46278016-1'
+google_analytics: 'G-Q81HPJYKP9'
 disqus: 'demowebsite'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
